[package]
name = "kvs"
version = "0.1.0"
authors = ["Max Bittman <maxb.personal@gmail.com>"]
description = "A key-value store"
edition = "2018"

[lib]
doctest = false
test = false

[dependencies]
clap = "2.32.0"
bson = "0.13"
serde = "1.0.98"
serde_derive = "1.0.98"


[dev-dependencies]
assert_cmd = "0.11.1"
predicates = "1.0.1"
tempfile = "3.0.7"
walkdir = "2.2.7"
