[package]
name = "kvs"
version = "0.1.0"
authors = ["Max Bittman <maxb.personal@gmail.com>"]
description = "A key-value store"
edition = "2018"

[lib]
doctest = false
test = false

[[bin]]
name = "kvs-server"
src = "src/bin/kvs-server.rs"

[[bin]]
name = "kvs-client"
src = "src/bin/kvs-client.rs"

[[bench]]
name = "kvs_engine"
harness = false

[dependencies]
clap = "2.32.0"
crossbeam = "0.7.2"
crossbeam-utils = "0.6.6"
base64 = "0.10.1"
bson = "0.13"
rayon = "1.2.0"
serde = "1.0.98"
serde_derive = "1.0.98"
sled = "0.26.3"
slog = "2.5.2"
sloggers = "0.3.3"

[dev-dependencies]
assert_cmd = "0.11"
criterion = "0.3"
predicates = "1.0.0"
rand = "0.7.0"
tempfile = "3.0.7"
walkdir = "2.2.7"
panic-control = "0.1.4"
